# trillium-tester

./: .travis.yml  appveyor.yml  readme.md  stack.yaml  trillium.cabal
installer/: installer.iss  prepare_installer.sh
src/: Logging.hs  Main.hs  Options.hs  Probability.hs  Upset.hs
